--- a/markwise/package.json
+++ b/markwise/package.json
@@ -20,12 +20,17 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.1.2",
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
+    "@angular/material": "^20.1.2",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.12",
+    "ngx-markdown": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
